--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <script src="script/video-background.js" defer></script>
     <script src="script/site-redirector.js" defer></script>
   </head>
-  <body>
+  <body class="load-effect-1">
     <!-- BACKGROUND CONTAINER -->
-    <div id="background-container" class="wireframe load-effect">
+    <div id="background-container" class="wireframe load-effect-2">
       <!-- GRADIENT CONTAINER -->
       <div id="gradient-background"></div>
 
@@ -57,17 +57,17 @@
       />
     </div>
 
-    <div id="main-content-container" class="wireframe load-effect">
+    <div id="main-content-container" class="wireframe load-effect-2">
       <!-- INTRODUCTION CONTAINER -->
       <div id="introduction-container" class="wireframe">
         <!-- ABOUT US CONTAINER -->
         <div id="about-us-container" class="wireframe">
-          <h1 class="text-xx-large text-bolded text-white load-effect">
+          <h1 class="text-xx-large text-bolded text-white load-effect-3">
             About
             <span class="text-xx-large text-bolded text-red">VOX</span>
             <span class="text-xx-large text-bolded text-white">VERITAS</span>
           </h1>
-          <p class="text-x-large text-white load-effect">
+          <p class="text-x-large text-white load-effect-3">
             Welcome to Vox Veritas where we uncovered the truth, raising
             awareness, and inspiring change. The Philippines stands at a road
             where justice and corruption constantly collide each breath we take.
@@ -116,6 +116,7 @@
 
         <!-- THE ACTUAL ARTICLES CONTAINER -->
         <div id="articles-container" class="wireframe">
+          <!-- UNO ARTICLE -->
           <button
             class="article-card wireframe"
             onmouseup="redirectToArticle('articles/uno-article/uno-article.html')"
@@ -131,12 +132,145 @@
               Trapped And Drowned Futures
             </h1>
             <p class="article-description wireframe text-white text-x-large">
-              By UNO
+              BY UNO
             </p>
             <p class="article-button text-x-large text-white wireframe">
               Click To View Artcle
             </p>
           </button>
+          <!-- MALIGNO ARTICLE -->
+          <button
+            class="article-card wireframe"
+            onmouseup="redirectToArticle('articles/maligno-article/maligno-article.html')"
+          >
+            <img
+              class="article-image wireframe"
+              src="articles/maligno-article/corruption-thumbnail.png"
+              alt=""
+            />
+            <h1
+              class="article-title wireframe text-white text-x-large text-bolded"
+            >
+              Justice Delayed. Corruption Sustained
+            </h1>
+            <p class="article-description wireframe text-white text-x-large">
+              BY MALIGNO
+            </p>
+            <p class="article-button text-x-large text-white wireframe">
+              Click To View Artcle
+            </p>
+          </button>
+          <!-- SAH ARTICLE -->
+          <button
+            class="article-card wireframe"
+            onmouseup="redirectToArticle('articles/sah-article/sah-article.html')"
+          >
+            <img
+              class="article-image wireframe"
+              src="articles/sah-article/IMG_1001.jpg"
+              alt=""
+            />
+            <h1
+              class="article-title wireframe text-white text-x-large text-bolded"
+            >
+              Photo Journalism
+            </h1>
+            <p class="article-description wireframe text-white text-x-large">
+              BY SAH
+            </p>
+            <p class="article-button text-x-large text-white wireframe">
+              Click To View Artcle
+            </p>
+          </button>
+
+          <button
+            class="article-card wireframe"
+            onmouseup="redirectToArticle('articles/sah-article/sah-article.html')"
+          >
+            <img
+              class="article-image wireframe"
+              src="articles/maligno-article/corruption-thumbnail.png"
+              alt=""
+            />
+            <h1
+              class="article-title wireframe text-white text-x-large text-bolded"
+            >
+              Justice Delayed. Corruption Sustained
+            </h1>
+            <p class="article-description wireframe text-white text-x-large">
+              BY MALIGNO
+            </p>
+            <p class="article-button text-x-large text-white wireframe">
+              Click To View Artcle
+            </p>
+          </button>
+
+          <button
+            class="article-card wireframe"
+            onmouseup="redirectToArticle('articles/maligno-article/maligno-article.html')"
+          >
+            <img
+              class="article-image wireframe"
+              src="articles/maligno-article/corruption-thumbnail.png"
+              alt=""
+            />
+            <h1
+              class="article-title wireframe text-white text-x-large text-bolded"
+            >
+              Justice Delayed. Corruption Sustained
+            </h1>
+            <p class="article-description wireframe text-white text-x-large">
+              BY MALIGNO
+            </p>
+            <p class="article-button text-x-large text-white wireframe">
+              Click To View Artcle
+            </p>
+          </button>
+
+          <button
+            class="article-card wireframe"
+            onmouseup="redirectToArticle('articles/maligno-article/maligno-article.html')"
+          >
+            <img
+              class="article-image wireframe"
+              src="articles/maligno-article/corruption-thumbnail.png"
+              alt=""
+            />
+            <h1
+              class="article-title wireframe text-white text-x-large text-bolded"
+            >
+              Justice Delayed. Corruption Sustained
+            </h1>
+            <p class="article-description wireframe text-white text-x-large">
+              BY MALIGNO
+            </p>
+            <p class="article-button text-x-large text-white wireframe">
+              Click To View Artcle
+            </p>
+          </button>
+
+          <button
+            class="article-card wireframe"
+            onmouseup="redirectToArticle('articles/maligno-article/maligno-article.html')"
+          >
+            <img
+              class="article-image wireframe"
+              src="articles/maligno-article/corruption-thumbnail.png"
+              alt=""
+            />
+            <h1
+              class="article-title wireframe text-white text-x-large text-bolded"
+            >
+              Justice Delayed. Corruption Sustained
+            </h1>
+            <p class="article-description wireframe text-white text-x-large">
+              BY MALIGNO
+            </p>
+            <p class="article-button text-x-large text-white wireframe">
+              Click To View Artcle
+            </p>
+          </button>
+
         </div>
       </div>
       <!-- 
@@ -152,33 +286,37 @@
     </div>
 
     <!-- THE TOP MENU BAR THINGY CONTAINER -->
-    <div id="menu-bar-container" class="wireframe">
+    <div id="menu-bar-container" class="wireframe load-effect-2">
       <div id="menu-bar" class="blur-backround title-effect wireframe">
         <div id="menu-bar-title" class="wireframe">
-          <span class="text-xx-large text-bolded text-red wireframe load-effect"
+          <span class="text-xx-large text-bolded text-red wireframe load-effect-3"
             >VOX</span
           >
           <span
-            class="text-xx-large text-bolded text-white wireframe load-effect"
+            class="text-xx-large text-bolded text-white wireframe load-effect-3"
             >VERITAS</span
           >
         </div>
         <div id="menubar-navigation-container" class="wireframe">
-          <button class="navigation-button text-red text-x-large text-bolded wireframe">
+          <button
+            class="navigation-button text-red text-x-large text-bolded wireframe"
+          >
             <img
               class="navigation-button-image wireframe"
               src="resources/general/home-icon-rs.png"
               alt=""
             />
-            Home
+            <p class="navigation-button-text text-x-large">Home</p>
           </button>
-          <button class="navigation-button text-red text-x-large text-bolded wireframe">
+          <button
+            class="navigation-button text-red text-x-large text-bolded wireframe"
+          >
             <img
               class="navigation-button-image wireframe"
               src="resources/general/article-icon-rs.png"
               alt=""
             />
-            Articles
+            <p class="navigation-button-text text-x-large">Articles</p>
           </button>
         </div>
       </div>
