--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="styles/polaroid-random.css" defer />
     <link rel="stylesheet" href="styles/load-effect.css" defer />
 
-    <script src="script/polaroid-swapper.js" defer></script>
-    <script src="script/video-background.js" defer></script>
-    <script src="script/site-redirector.js" defer></script>
+    <script src="./script/polaroid-swapper.js" defer></script>
+    <script src="./script/video-background.js" defer></script>
+    <script src="./script/site-redirector.js" defer></script>
   </head>
   <body class="load-effect-1">
     <!-- BACKGROUND CONTAINER -->
