Optimized/Made files smaller

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <!-- FIRE BACKGROUND CONTAINER -->
       <video id="video-background-player" autoplay muted loop playsinline>
-        <source src="resources/bg_fire.mp4" type="video/mp4" />
+        <source src="resources/bg_fire.webm" type="video/mp4" />
       </video>
 
       <!-- PROTESTERS BACKGROUND CONTAINER -->
@@ -82,21 +82,21 @@
           <div id="rplextracontainer">
             <img
               id="homescreen-polaroids-v1"
-              class="random-polaroid-photos"
+              class="random-polaroid-photos active"
               src="none"
               alt=""
               srcset=""
             />
             <img
               id="homescreen-polaroids-v2"
-              class="random-polaroid-photos"
+              class="random-polaroid-photos active"
               src="none"
               alt=""
               srcset=""
             />
             <img
               id="homescreen-polaroids-v3"
-              class="random-polaroid-photos"
+              class="random-polaroid-photos active"
               src="none"
               alt=""
               srcset=""
@@ -167,7 +167,7 @@
           >
             <img
               class="article-image wireframe"
-              src="articles/sah-article/IMG_1001.jpg"
+              src="articles/sah-article/IMG_1001-rs.jpg"
               alt=""
             />
             <h1
@@ -270,7 +270,6 @@
               Click To View Artcle
             </p>
           </button>
-
         </div>
       </div>
       <!-- 
@@ -289,7 +288,8 @@
     <div id="menu-bar-container" class="wireframe load-effect-2">
       <div id="menu-bar" class="blur-backround title-effect wireframe">
         <div id="menu-bar-title" class="wireframe">
-          <span class="text-xx-large text-bolded text-red wireframe load-effect-3"
+          <span
+            class="text-xx-large text-bolded text-red wireframe load-effect-3"
             >VOX</span
           >
           <span
