--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="styles/home/home-load-begin.css" />
     <link rel="stylesheet" href="styles/home/home-main-content-container.css" />
     <link rel="stylesheet" href="styles/home/home-page-texts.css" />
-    <link rel="stylesheet" href="styles/home/home-load-effects.css" defer />
+    <link rel="stylesheet" href="styles/load-effect-begin.css">
+    <link rel="stylesheet" href="styles/load-effect.css" defer />
     <link rel="stylesheet" href="styles/home/home-polaroid-random.css" defer />
 
     <link rel="stylesheet" href="styles/menu-bar-container.css" />
@@ -21,9 +22,9 @@
     <script src="./script/video-background.js" defer></script>
     <script src="./script/site-redirector.js" defer></script>
   </head>
-  <body class="load-effect-1">
+  <body class="fade-load-effect-1">
     <!-- BACKGROUND CONTAINER -->
-    <div id="background-container" class="wireframe load-effect-2">
+    <div id="background-container" class="wireframe fade-load-effect-2">
       <!-- GRADIENT CONTAINER -->
       <div id="gradient-background"></div>
 
@@ -59,13 +60,13 @@
       />
     </div>
 
-    <div id="main-content-container" class="wireframe load-effect-2">
+    <div id="main-content-container" class="wireframe fade-load-effect-2">
       <!-- INTRODUCTION CONTAINER -->
       <div id="introduction-container" class="wireframe">
         <!-- ABOUT US CONTAINER -->
         <div id="about-us-container" class="wireframe">
           <h1
-            class="home-text-xx-large text-bolded home-text-main load-effect-3"
+            class="home-text-xx-large text-bolded home-text-main fade-load-effect-3"
           >
             About
             <span class="home-text-xx-large text-bolded home-text-secondary"
@@ -75,7 +76,7 @@
               >VERITAS</span
             >
           </h1>
-          <p class="home-text-x-large text-normal home-text-main load-effect-3">
+          <p class="home-text-x-large text-normal home-text-main fade-load-effect-3">
             Welcome to Vox Veritas where we uncovered the truth, raising
             awareness, and inspiring change. The Philippines stands at a road
             where justice and corruption constantly collide each breath we take.
@@ -131,7 +132,7 @@
           >
             <img
               class="article-image wireframe"
-              src="articles/uno-article/IMG_3752.JPG"
+              src="resources/general/uno/IMG_3751-rs.JPG"
               alt=""
             />
             <h1
@@ -183,7 +184,7 @@
           >
             <img
               class="article-image wireframe"
-              src="articles/sah-article/IMG_1001-rs.jpg"
+              src="resources/general/sah/IMG_0992-rs.jpg"
               alt=""
             />
             <h1 class="article-title home-text-main home-text-xx-large text-bolded wireframe">
@@ -200,20 +201,45 @@
               Click To View Artcle
             </p>
           </button>
+
+          <!-- SAPLIT ARTICLE -->
+           <button
+            class="article-card wireframe"
+            onmouseup="redirectToArticle('articles/saplit-article/saplit-article.html')"
+          >
+            <img
+              class="article-image wireframe"
+              src="resources/general/saplit/IMG_20250929_230104.png"
+              alt=""
+            />
+            <h1 class="article-title home-text-main home-text-x-large text-bolded wireframe">
+              Hindi Baha Ang Kaaway
+            </h1>
+            <p
+              class="article-description home-text-main home-text-x-large text-normal wireframe"
+            >
+              BY SAPLIT
+            </p>
+            <p
+              class="article-button home-text-main home-text-x-large text-normal wireframe"
+            >
+              Click To View Artcle
+            </p>
+          </button>
         </div>
       </div>
     </div>
 
     <!-- THE TOP MENU BAR THINGY CONTAINER -->
-    <div id="menu-bar-container" class="wireframe load-effect-2">
+    <div id="menu-bar-container" class="wireframe fade-load-effect-2">
       <div id="menu-bar" class="blur-backround title-effect wireframe">
         <div id="menu-bar-title" class="wireframe">
           <span
-            class="text-xx-large text-bolded text-red wireframe load-effect-3"
+            class="text-xx-large text-bolded text-red wireframe fade-load-effect-3"
             >VOX</span
           >
           <span
-            class="text-xx-large text-bolded text-white wireframe load-effect-3"
+            class="text-xx-large text-bolded text-white wireframe fade-load-effect-3"
             >VERITAS</span
           >
         </div>
